k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    role: api
spec:
  replicas: 1
  selector:
    matchLabels:
      role: api
  template:
    metadata:
      labels:
        role: api
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        tier: back-end
      containers:
        - name: api
          image: 787080764332.dkr.ecr.ap-northeast-1.amazonaws.com/weather-csv-api:v0.98 
          ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    role: api
