k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: wheather-container-app
  labels:
    role: app
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app
  template:
    metadata:
      labels:
        role: app
    spec:
      containers:
      - name: app
        image: 787080764332.dkr.ecr.ap-northeast-1.amazonaws.com/wheather-container-app:0.9
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    role: app
